--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-db2paramaters.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-db2paramaters.yaml.j2
@@ -1,1 +1,4 @@
-{{RDS_MANAGE_DB2_COMBINE_PROPERTIES}}
+{% set properties = RDS_MANAGE_DB2_COMBINE_PROPERTIES | from_json %}
+{% for key, value in properties.items() %}
+{{ key }}: {{ value | tojson }}
+{% endfor %}
